# cpuburner

./: CMakeLists.txt
data/: burn.data.xml
docs/: README.md
plugins/: CPUBurner.cpp  CPUBurner.hpp
schema/cpuburner/: cpuburner.jsonnet  cpuburner.schema.xml  cpuburnerinfo.jsonnet
